--- a/data/seasonOrder.json
+++ b/data/seasonOrder.json
@@ -1,8 +1,8 @@
 {
   "2025": ["melbourne", "shanghai"],
-  "2024": ["melbourne", "suzuka", "shanghai"],
-  "2023": ["melbourne", "suzuka"],
-  "2022": ["melbourne", "suzuka"],
+  "2024": ["Bahrain", "melbourne", "suzuka", "shanghai"],
+  "2023": ["Bahrain", "melbourne", "suzuka"],
+  "2022": ["Bahrain", "melbourne", "suzuka"],
   "2019": ["melbourne", "shanghai"],
   "2018": ["shanghai"],
   "2017": ["shanghai"]
