historic table added

--- a/data/seasonOrder.json
+++ b/data/seasonOrder.json
@@ -1,6 +1,6 @@
 {
   "2025": ["melbourne", "shanghai"],
-  "2024": ["Bahrain", "Jeddah", "melbourne", "suzuka", "shanghai"],
+  "2024": ["Bahrain", "Jeddah", "melbourne", "suzuka", "shanghai", "miami"],
   "2023": ["Bahrain", "Jeddah", "melbourne", "suzuka"],
   "2022": ["Bahrain", "Jeddah", "melbourne", "suzuka"],
   "2019": ["melbourne", "shanghai"],
