--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "f1",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-historic": "node scripts/generateHistoric.js"
   },
   "dependencies": {
     "framer-motion": "^12.5.0",
