--- a/data/seasonOrder.json
+++ b/data/seasonOrder.json
@@ -1,9 +1,9 @@
 {
-  "2025": ["melbourne", "shanghai"],
+  "2025": ["melbourne", "shanghai", "suzuka"],
   "2024": ["bahrain", "jeddah", "melbourne", "suzuka", "shanghai", "miami"],
   "2023": ["bahrain", "jeddah", "melbourne", "miami", "suzuka"],
   "2022": ["bahrain", "jeddah", "melbourne", "miami", "suzuka"],
-  "2019": ["melbourne", "shanghai"],
+  "2019": ["melbourne", "shanghai", "suzuka"],
   "2018": ["shanghai"],
   "2017": ["shanghai"]
 }
