--- a/data/seasonOrder.json
+++ b/data/seasonOrder.json
@@ -1,8 +1,16 @@
 {
   "2025": ["melbourne", "shanghai", "suzuka"],
-  "2024": ["bahrain", "jeddah", "melbourne", "suzuka", "shanghai", "miami"],
+  "2024": [
+    "bahrain",
+    "jeddah",
+    "melbourne",
+    "suzuka",
+    "shanghai",
+    "miami",
+    "imola"
+  ],
   "2023": ["bahrain", "jeddah", "melbourne", "miami", "suzuka"],
-  "2022": ["bahrain", "jeddah", "melbourne", "miami", "suzuka"],
+  "2022": ["bahrain", "jeddah", "melbourne", "imola", "miami", "suzuka"],
   "2019": ["melbourne", "shanghai", "suzuka"],
   "2018": ["shanghai"],
   "2017": ["shanghai"]
