--- a/data/seasonOrder.json
+++ b/data/seasonOrder.json
@@ -1,5 +1,5 @@
 {
-  "2025": ["melbourne", "shanghai", "suzuka", "bahrain", "jeddah"],
+  "2025": ["melbourne", "shanghai", "suzuka", "bahrain", "jeddah", "miami"],
   "2024": [
     "bahrain",
     "jeddah",
